[FIX] Use a dedicated class loader for loading maven libraries
Also load all maven libs at meveo startup